<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cheflayout"
    tools:context="com.example.appfood_by_tinnguyen2421.BottomNavigation.ChefBottomNavigation">

    <FrameLayout

        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/chef_bottom_navigation"/>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/chef_bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?android:attr/windowBackground"
            android:backgroundTint="@color/white"
            app:itemIconTint="@color/bottomcolour"
            app:itemTextColor="@color/bottomcolour"
            app:menu="@menu/chef_bottom_navigation"/>



</RelativeLayout>