<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.appfood_by_tinnguyen2421.BottomNavigation.CustomerBottomNavigation">

    <FrameLayout

        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/white"
        app:itemIconTint="@color/bottomcolour"
        app:itemTextColor="@color/bottomcolour"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/customer_bottom_navigation"/>

</RelativeLayout>